# Hybrid-CPU-GPU-Task-Scheduler

./: CMakeLists.txt  Final Results.xlsx  Project results.xlsx  README.md  results.csv  runScheduler_Script.py
include/: cpu_tasks.h  gpu_tasks.h  metrics.h  scheduler.h  task.h
kernels/: gaussianblur.cl  matmul.cl  sort.cl  vecadd.cl
src/: cpu_tasks.cpp  gpu_tasks.cpp  main.cpp  metrics.cpp  scheduler.cpp  task.cpp
test/: CPU_detection.cpp  GPU_detection.cpp
